Fixed overflow (Closes #1)

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -32,12 +32,14 @@ a { color: $color-font; }
 	font-size: 0.975rem;
 }
 
+::-webkit-scrollbar {
+	display: none;
+}
+
 html, body {
 	min-width: 100%;
 	min-height: 100%;
-	max-height: 100vh;
 	max-width: 100vw;
-	overflow: hidden;
 	background-color: $color-bg;
 	color: $color-font;
 	font-family: $font-body;
